# astra

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_complete_demo.py  test_foundation.py  test_notebooks.py  test_visualization.py
config/: __init__.py  instruments.py  risk_limits.py  settings.py
examples/: basic_backtest.py  monte_carlo_demo.py  risk_management_demo.py  test_monte_carlo.py  visualization_demo.py
reports/: backtest_report_Test Strategy_2025-08-16_12-45-22.html
rust_monte_carlo/: Cargo.toml
rust_monte_carlo/src/: lib.rs
src/: __init__.py
src/backtesting/: __init__.py  astra_vectorbt.py  engine.py  strategies.py
src/data/: __init__.py  loader.py  preprocessor.py  validator.py
src/monte_carlo/: __init__.py  risk_metrics.py  scenarios.py
src/risk_management/: __init__.py  circuit_breakers.py  metrics.py  position_sizing.py  risk_monitor.py
src/visualization/: __init__.py  charts.py  reports.py  vectorbt_charts.py
