[tool.poetry]
name = "astra-trading"
version = "0.1.0"
description = "Advanced Monte Carlo Risk Analysis for Algorithmic Trading"
authors = ["Astra Development Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
vectorbt = {version = "^0.25.2", python = "<3.11"}
yfinance = "^0.2.18"
numpy = "^1.23.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"
cvxpy = "^1.4.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
maturin = "^1.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"