[package]
name = "rust_monte_carlo"
version = "0.1.0"
edition = "2021"

[lib]
name = "astra_monte_carlo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
nalgebra = "0.32"
statrs = "0.16"
serde = { version = "1.0", features = ["derive"] }

[dependencies.numpy]
version = "0.19"
default-features = false
